Update crax settings

--- a/cea/default.config
+++ b/cea/default.config
@@ -130,26 +130,42 @@ buildings =
 buildings.type = BuildingsParameter
 buildings.help = List of buildings considered for the radiation simulation in the format of [BuildingID1, BuildingID2, ...]. Leave blank when simulating all buildings.
 
+albedo = 0.2
+albedo.type = RealParameter
+albedo.help = Albedo of the terrain.
+albedo.category = Parameters for crax
+
 calculate-sensor-data = true
 calculate-sensor-data.type = BooleanParameter
-calculate-sensor-data.help =  True if intended to calculate solar energy potentials. False if intended to skip all solar energy potential calculations and for faster results.
+calculate-sensor-data.help =  False to only calculate total radiation for each building-facing orientation via polygon clipping method. If only demand calculations are needed, set it to false; if need to calculate radiation data for each grid point (only needed for running solar technologies), set it to true.
+calculate-sensor-data.category = Advanced
 
-roof-grid = 3
+using-cea-sensor = false
+using-cea-sensor.type = BooleanParameter
+using-cea-sensor.help =  True to use the cea-daysim method to generate sensor csv files. False to use the CRAX method to generate sensor csv files (more fast).
+using-cea-sensor.category = Advanced
+
+roof-grid = 2
 roof-grid.type = RealParameter
 roof-grid.help =  Grid resolution of the roof surfaces (m) for CRAX grid generation method.
 roof-grid.category = Level of Details
 
-walls-grid = 3
+walls-grid = 2
 walls-grid.type = RealParameter
 walls-grid.help = Grid resolution of wall surfaces (m) for CRAX grid generation method.
 walls-grid.category = Level of Details
 
-zone-geometry = 2
+mesh-clipping-view-factor = false
+mesh-clipping-view-factor.type = BooleanParameter
+mesh-clipping-view-factor.help = If set to false, the view factor of the grid uses the average view factor of the building surface it belongs to; if set to true, the view factor is calculated individually for each grid.
+mesh-clipping-view-factor.category = Advanced
+
+zone-geometry = 0
 zone-geometry.type = RealParameter
 zone-geometry.help = Simplification level of zone geometry; tolerance distance of points in meters from original.
 zone-geometry.category = Level of Details
 
-surrounding-geometry = 5
+surrounding-geometry = 3
 surrounding-geometry.type = RealParameter
 surrounding-geometry.help = Simplification level of surroundings geometry; tolerance distance of points in meters from original.
 surrounding-geometry.category = Level of Details
@@ -159,15 +175,10 @@ neglect-adjacent-buildings.type = BooleanParameter
 neglect-adjacent-buildings.help = True if adjacent walls with neighboring buildings should be neglected. If set to True, the results might be less accurate (there might be insolation on attached walls and no adiabatic surfaces between adjacent buildings will be considered), but the simulation time will decrease somewhat.
 neglect-adjacent-buildings.category = Level of Details
 
-albedo = 0.2
-albedo.type = RealParameter
-albedo.help = Albedo of the terrain.
-albedo.category = Parameters for CRAX
-
-using-cea-sensor = true
-using-cea-sensor.type = BooleanParameter
-using-cea-sensor.help =  True to use the native CEA-DAYSIM method to generate sensors. False to use the CRAX method. (This is a placeholder and either choice is using the CEA-DAYSIM method.)
-using-cea-sensor.category = Parameters for CRAX
+neighbor-filter-altitude-angle = 15
+neighbor-filter-altitude-angle.type = RealParameter
+neighbor-filter-altitude-angle.help = The altitude angle threshold used to filter neighboring buildings when calculating reflected radiation from them.
+neighbor-filter-altitude-angle.category = Level of Details
 
 crax-bin-directory =
 crax-bin-directory.type = PathParameter
@@ -177,7 +188,7 @@ crax-bin-directory.category = Advanced
 update-shadow-day = 15
 update-shadow-day.type = RealParameter
 update-shadow-day.help = Shadow update frequency, i.e., the interval (in days) to update the shadow calculation results. When set to 1, shadows are calculated on an hourly basis.
-update-shadow-day.category = Parameters for CRAX
+update-shadow-day.category = Level of Details
 
 [radiation]
 buildings =
