--- a/environment.yml
+++ b/environment.yml
@@ -46,6 +46,7 @@ dependencies:
   - python-multipart # Required by fastapi for file uploads
   - sqlmodel # Required by fastapi for database models
   - asyncpg # Required by sqlmodel for postgres
+  - aiosqlite # Required for async sqlite adapter
   - pyjwt[crypto] # Required by fastapi for JWT authentication
   - wntr==0.2.3
   - git+https://github.com/reyery/py4design.git@ignore-display # modified p4design to remove deprecated functions
