--- a/environment.yml
+++ b/environment.yml
@@ -3,40 +3,27 @@ channels:
 - conda-forge
 dependencies:
 - cvxopt # For wntr
-- deap
-- ephem
 - fiona
 - geopandas=0.13 # Due to python3.8 support
 - libpysal
-- networkx=2.8
 - numba=0.57
 - numpy=1.24 # Due to python3.8 support
-- numpy-financial
 - osmnx=1.8
 - pip
 - psutil
-- pvlib-python
+- pvlib
 - python=3.8 # Held back by wntr version
-- python-louvain
 - pythonocc-core==7.7.0 # Avoid deprecation warnings
-- pytz # Not required from 3.9
 - pyyaml
-- salib
 - scikit-learn=1.3.2
 - scipy=1.10 # Due to python3.8 support
 - shapely=2
-- timezonefinder
 - matplotlib
 - notebook
-- openpyxl
-- plotly
-- utm
-- xlrd
-- xlwt
 - pyarrow
 - git
-- yarn=4 # Use latest version of yarn
 - pip:
+  # Web
   - aiocache[redis]
   - fastapi
   - pydantic-settings
@@ -48,5 +35,19 @@ dependencies:
   - asyncpg # Required by sqlmodel for postgres
   - aiosqlite # Required for async sqlite adapter
   - pyjwt[crypto] # Required by fastapi for JWT authentication
+  # Python packages
+  - deap
+  - ephem
+  - networkx==2.8
+  - numpy-financial
+  - python-louvain
+  - pytz # Not required from 3.9
+  - salib
+  - timezonefinder
+  - openpyxl
+  - plotly
+  - utm
+  - xlrd
+  - xlwt
   - wntr==0.2.3
   - git+https://github.com/reyery/py4design.git@ignore-display # modified p4design to remove deprecated functions
