--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -8,8 +8,8 @@ Import & Export:
       ```
       {CEA Project}/{Current Scenario}/export/rhino/from_cea.
       ```
-      Download the .gh file and a .3dm example [here](https://www.cityenergyanalyst.com/s/cea4_beta_01.zip).
-      Use the Grasshopper components to import the exported package into Rhino/Grasshopper.  
+      Download cea4gh and examples [here](https://www.cityenergyanalyst.com/cea4gh).
+      Then, use cea4gh to bring the exported package into Rhino/Grasshopper.  
 
     interfaces: [cli, dashboard]
     module: cea.import_export.export_to_rhino_gh
@@ -22,9 +22,8 @@ Import & Export:
     description: |
       This Feature imports Rhino/Grasshopper-generated files into CEA.
       
-      Download the .gh file and a .3dm example [here](https://www.cityenergyanalyst.com/s/cea4_beta_01.zip) to import the Rhino/Grasshopper-generated files.
-      
-      Ensure that the current Scenario is the Scenario generated using the Grasshopper components from the link.
+      Download cea4gh and examples [here](https://www.cityenergyanalyst.com/cea4gh) to prepare CEA-ready Grasshopper files.
+      Ensure that the current Scenario is the one generated using cea4gh.
 
     interfaces: [cli, dashboard]
     module: cea.import_export.import_from_rhino_gh
