--- a/.github/workflows/setup_build.yml
+++ b/.github/workflows/setup_build.yml
@@ -174,6 +174,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GUI_GH_TOKEN }}
         run: |
           cd gui
+          rm -rf dist/*
           yarn
           yarn version $CEA_VERSION
           yarn electron:release --arm64 --x64
