Delete directory instead of files

--- a/.github/workflows/setup_build.yml
+++ b/.github/workflows/setup_build.yml
@@ -165,7 +165,7 @@ jobs:
         run: corepack enable
       
       - name: Clean dist directory
-        run: rm -rf gui/dist/*
+        run: rm -rf gui/dist
 
       - name: Package CEA GUI
         env:
