--- a/.github/workflows/setup_build.yml
+++ b/.github/workflows/setup_build.yml
@@ -159,7 +159,7 @@ jobs:
   
       - uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: latest
   
       - name: Enable Corepack
         run: corepack enable
