Force remove cache

--- a/.github/workflows/setup_build.yml
+++ b/.github/workflows/setup_build.yml
@@ -168,6 +168,7 @@ jobs:
         run: |
           rm -rf gui/dist
           rm -rf gui/node_modules/.cache/
+          npm cache clean --force
 
       - name: Package CEA GUI
         env:
