Add weather morphing options to config and import pyepwmorph
Introduced new weather morphing parameters in default.config, including year, climate pathway, percentile, and variables. Also added pyepwmorph import in weather_helper.py to support weather file morphing functionality.

--- a/cea/default.config
+++ b/cea/default.config
@@ -125,6 +125,33 @@ weather =
 weather.type = WeatherPathParameter
 weather.help = Path to a weather file (.epw) or the label of one CEA Built-in weather file. Leave blank to fetch from third-party sources.
 
+morph = False
+morph.type = BooleanParameter
+morph.help = Morph the weather file to match the desired climate pathway and year.
+
+year = 2050
+year.type = IntegerParameter
+year.help = Year to which the weather file is morphed.
+year.category = Morph Settings
+
+climate-pathways =
+climate-pathways.type = ChoiceParameter
+climate-pathways.choices = best_case, moderate_case, worst_case
+climate-pathways.help = Climate pathways to morph the weather file to. The "Best Case" pathway corresponds to a 1.8°C increase in global temperature, the "Moderate Case" pathway corresponds to a 2.7°C increase, and the "Worst Case" pathway corresponds to a 4.4°C increase.
+climate-pathways.category = Morph Settings
+
+percentile = 50
+percentile.type = ChoiceParameter
+percentile.choices = 1, 5, 10, 25, 50, 75, 90, 95, 99
+percentile.help = Percentile of the weather file to morph to. The percentile is applied to the temperature and radiation data of the weather file.
+percentile.category = Morph Settings
+
+variables =
+variables.type = MultiChoiceParameter
+variables.choices = temperature, radiation, relative_humidity, wind_speed, pressure, dew_point
+variables.help = List of weather variables to morph.
+variables.category = Morph Settings
+
 [radiation-crax]
 buildings =
 buildings.type = BuildingsParameter
