Update Python dependencies to latest versions
Bump versions of several dependencies in environment.yml and pyproject.toml. Update conda-lock.yml to reflect new dependency versions and Python version requirements. This ensures compatibility with the latest package releases and improves environment consistency.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "cityenergyanalyst"
 description = "City Energy Analyst"
 readme = "README.rst"
-requires-python = "==3.8.*"
+requires-python = ">=3.10"
 license = { file = "LICENSE" }
 authors = [
     { name = "Architecture and Building Systems", email = "cea@arch.ethz.ch" }
