Trigger tests on ready_for_review PRs and rename job
Added 'ready_for_review' to pull request trigger types to ensure tests run when a draft PR is marked ready. Renamed the 'build' job to 'tests' and added a condition to skip tests for draft PRs.

--- a/.github/workflows/pull.request.yml
+++ b/.github/workflows/pull.request.yml
@@ -2,7 +2,7 @@ name: Pull Request Tests
 
 on:
   pull_request:
-    types: [opened, synchronize]
+    types: [opened, synchronize, ready_for_review]
     branches: [master, release-**]
 
 jobs:
@@ -42,7 +42,8 @@ jobs:
             })
             core.setFailed('conda-lock.yml needs to be updated')
 
-  build:
+  tests:
+    if: github.event.pull_request.draft == false
     name: ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     needs: check_environment_yml
