--- a/cea/default.config
+++ b/cea/default.config
@@ -1774,8 +1774,8 @@ release-version =
 release-version.type = StringParameter
 release-version.help = Version number for new release in Semantic Versioning format (e.g., 1.0.0)
 
-[plots-demand]
 
+[plots-general]
 plot-title =
 plot-title.type = StringParameter
 plot-title.nullable = true
@@ -1789,22 +1789,6 @@ plot-type.help = Select the type of plot.
 buildings =
 buildings.type = BuildingsParameter
 buildings.help = List of buildings selected to plot. Leave blank when to select all. All buildings selected here = a district.
-
-y-metric-to-plot = grid_electricity_consumption
-y-metric-to-plot.type = MultiChoiceParameter
-y-metric-to-plot.choices = grid_electricity_consumption, enduse_electricity_demand, enduse_cooling_demand, enduse_space_cooling_demand,	enduse_heating_demand, enduse_space_heating_demand,	enduse_dhw_demand
-y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis.
-
-y-metric-unit = kWh
-y-metric-unit.type = ChoiceParameter
-y-metric-unit.choices = MWh, kWh, Wh
-y-metric-unit.help = Select the unit of the metric to plot for the Y-axis.
-y-metric-unit.category = Y-axis settings
-
-y-normalised-by = gross_floor_area,
-y-normalised-by.type = ChoiceParameter
-y-normalised-by.choices = no_normalisation, gross_floor_area, conditioned_floor_area
-y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
 
 y-min =
 y-min.type = RealParameter
@@ -1893,5 +1877,43 @@ min-ratio-as-main-use = 0
 min-ratio-as-main-use.type= RealParameter
 min-ratio-as-main-use.help= Set the minimum threshold (inclusive) for a use type to be considered as the main use of a building. A valid value ranges from 0 to 1.
 min-ratio-as-main-use.category = Filter by building construction time, type and use type
+
+
+[plots-demand]
+
+y-metric-to-plot = grid_electricity_consumption
+y-metric-to-plot.type = MultiChoiceParameter
+y-metric-to-plot.choices = grid_electricity_consumption, enduse_electricity_demand, enduse_cooling_demand, enduse_space_cooling_demand,	enduse_heating_demand, enduse_space_heating_demand,	enduse_dhw_demand
+y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis.
+
+y-metric-unit = kWh
+y-metric-unit.type = ChoiceParameter
+y-metric-unit.choices = MWh, kWh, Wh
+y-metric-unit.help = Select the unit of the metric to plot for the Y-axis.
+y-metric-unit.category = Y-axis settings
+
+y-normalised-by = gross_floor_area,
+y-normalised-by.type = ChoiceParameter
+y-normalised-by.choices = no_normalisation, gross_floor_area, conditioned_floor_area
+y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
+
+
+[plots-renewables-pv]
+
+y-metric-to-plot = roof, wall_north, wall_east, wall_south, wall_west
+y-metric-to-plot.type = MultiChoiceParameter
+y-metric-to-plot.choices = pv_electricity_yield, sc_heat_yield, roof, wall_north, wall_east, wall_south, wall_west
+y-metric-to-plot.help = Select the building envelope surface(s) to plot for the Y-axis: pv electricity yield
+
+y-metric-unit = kWh
+y-metric-unit.type = ChoiceParameter
+y-metric-unit.choices = MWh, kWh, Wh
+y-metric-unit.help = Select the unit of the metric to plot for the Y-axis.
+y-metric-unit.category = Y-axis settings
+
+y-normalised-by = gross_floor_area
+y-normalised-by.type = ChoiceParameter
+y-normalised-by.choices = no_normalisation, gross_floor_area, pv_area_installed_for_respective_surface
+y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
 
 
