--- a/cea/default.config
+++ b/cea/default.config
@@ -1902,8 +1902,8 @@ y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
 
 y-metric-to-plot = roof, wall_north, wall_east, wall_south, wall_west
 y-metric-to-plot.type = MultiChoiceParameter
-y-metric-to-plot.choices = pv_electricity_yield, sc_heat_yield, roof, wall_north, wall_east, wall_south, wall_west
-y-metric-to-plot.help = Select the building envelope surface(s) to plot for the Y-axis: pv electricity yield
+y-metric-to-plot.choices = roof, wall_north, wall_east, wall_south, wall_west
+y-metric-to-plot.help = Select the building envelope surface(s) to plot for the Y-axis: pv electricity yield.
 
 y-metric-unit = kWh
 y-metric-unit.type = ChoiceParameter
@@ -1917,3 +1917,39 @@ y-normalised-by.choices = no_normalisation, gross_floor_area, pv_area_installed_
 y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
 
 
+[plots-renewables-pvt]
+
+y-metric-to-plot = roof, wall_north, wall_east, wall_south, wall_west
+y-metric-to-plot.type = MultiChoiceParameter
+y-metric-to-plot.choices = roof, wall_north, wall_east, wall_south, wall_west
+y-metric-to-plot.help = Select the building envelope surface(s) to plot for the Y-axis: pv electricity yield and sc heat yield.
+
+y-metric-unit = kWh
+y-metric-unit.type = ChoiceParameter
+y-metric-unit.choices = MWh, kWh, Wh
+y-metric-unit.help = Select the unit of the metric to plot for the Y-axis.
+y-metric-unit.category = Y-axis settings
+
+y-normalised-by = gross_floor_area
+y-normalised-by.type = ChoiceParameter
+y-normalised-by.choices = no_normalisation, gross_floor_area, pv_area_installed_for_respective_surface
+y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
+
+
+[plots-renewables-sc]
+
+y-metric-to-plot = roof, wall_north, wall_east, wall_south, wall_west
+y-metric-to-plot.type = MultiChoiceParameter
+y-metric-to-plot.choices = roof, wall_north, wall_east, wall_south, wall_west
+y-metric-to-plot.help = Select the building envelope surface(s) to plot for the Y-axis: sc heat yield.
+
+y-metric-unit = kWh
+y-metric-unit.type = ChoiceParameter
+y-metric-unit.choices = MWh, kWh, Wh
+y-metric-unit.help = Select the unit of the metric to plot for the Y-axis.
+y-metric-unit.category = Y-axis settings
+
+y-normalised-by = gross_floor_area
+y-normalised-by.type = ChoiceParameter
+y-normalised-by.choices = no_normalisation, gross_floor_area, sc_area_installed_for_respective_surface
+y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
