--- a/cea/default.config
+++ b/cea/default.config
@@ -1898,7 +1898,7 @@ y-normalised-by.choices = no_normalisation, gross_floor_area, conditioned_floor_
 y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
 
 
-[plots-renewables-pv]
+[plots-pv]
 
 y-metric-to-plot = roof, wall_north, wall_east, wall_south, wall_west
 y-metric-to-plot.type = MultiChoiceParameter
@@ -1917,7 +1917,7 @@ y-normalised-by.choices = no_normalisation, gross_floor_area, pv_area_installed_
 y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
 
 
-[plots-renewables-pvt]
+[plots-pvt]
 
 y-metric-to-plot = roof, wall_north, wall_east, wall_south, wall_west
 y-metric-to-plot.type = MultiChoiceParameter
@@ -1936,7 +1936,7 @@ y-normalised-by.choices = no_normalisation, gross_floor_area, pv_area_installed_
 y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
 
 
-[plots-renewables-sc]
+[plots-sc]
 
 y-metric-to-plot = roof, wall_north, wall_east, wall_south, wall_west
 y-metric-to-plot.type = MultiChoiceParameter
